# footsteps

./: .flake8  .gitignore  .trigger-deploy  .windsurfrules  AGENTS.md  CLAUDE.md  FEATURE_SUMMARY.md  README.md  package-lock.json  pyproject.toml  setup.sh
.claude/: settings.local.json
.claude/commands/: debug-deploy.md  fix-deploy.md
.gent/: rules.md
.gent/original_configs/: CLAUDE.md
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  deploy-data.yml  deploy-pages.yml  deploy.yml  upload-pmtiles.yml
.windsurf/workflows/: build-tiles.md  check-data.md  test-and-build.md
cache-warmer/: Dockerfile  README.md  package.json  warm-cache.js
docs/: design-philosophy.md  design-system.md
docs/philosophy/: design-philosophy.md  one-pager.md
footstep-generator/: CLAUDE.md  README.md  __init__.py  analyze_coords.py  array_manager.py  convert_mbtiles_dir_to_pmtiles.py  dot_generator.py  download_hyde_bulk.py  export_mbtiles_to_pbf.py  fetch_data.py  fix_coordinates.py  generate_footstep_tiles.py  hyde_tile_processor.py  landmask.py  lod_config.py  lod_processor.py  make_tiles.py  models.py  pmtiles_utils.py  process_cities.py  process_hyde.py  redistribute_coords.py  settlement_registry.py  tile_generator.py  verify_tiles.py
footstep-generator/tests/: __init__.py  test_basic.py  test_combined_script.py  test_deterministic_positioning.py  test_e2e.py  test_hyde_discovery.py  test_integration.py  test_land_mask.py  test_multi_year_continuity.py  test_poisson_disc_sampling.py  test_process_cities.py  test_randomization_consistency.py  test_settlement_continuity.py  test_utils.py  test_vectorization_performance.py
footsteps-web/: .dockerignore  .eslintrc.json  .gcloudignore  CLAUDE.md  Dockerfile  README.md  jest.config.js  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml
footsteps-web/.claude/: settings.local.json
footsteps-web/app/: globals.css  layout.tsx  page.tsx
footsteps-web/e2e/: population.spec.ts
footsteps-web/lib/: QueryParamRangeSource.ts  ensureByteLength.test.ts  ensureByteLength.ts  env.ts  format.ts  gpuInterpolation.ts  httpRangeMbtiles.ts  parseInitialViewState.ts  pmtilesClient.ts  pmtilesTileLayer.ts  simpleMbtilesReader.ts  tilesConfig.ts  tilesService.ts  useYear.test.ts  useYear.ts  useYearWithInterpolation.ts  viewModeStore.ts
footsteps-web/public/: _headers  sw.js
footsteps-web/scripts/: test-httpvfs.mjs
footsteps-web/types/: mbtiles.d.ts  pmtiles-global.d.ts  sqljs-httpvfs.d.ts
humans-globe/: CLAUDE.md  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
humans-globe-viz/: .eslintrc.json  CLAUDE.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
humans-globe-viz/app/: globals.css  page.tsx
iac/: .gitignore  README.md  github-actions-sa.tf  main.tf  moved.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
mbtiles-export/: Dockerfile  README.md  export_mbtiles_job.py
scripts/: __init__.py  upload_pmtiles.sh  verify_tiles_entry.py
tests/: test_redistribute_coords.py
(+152 files in other folders)
